--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,3 +60,208 @@
 {
     text-decoration: underline;
 }
+
+
+.nav-item__bell
+{
+    margin-right: 30px;
+}
+
+.navbar
+{
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.03);
+    margin-bottom: 30px;
+}
+
+h1
+{
+    display: inline-block;
+    font-weight: bold;
+}
+
+img, svg{
+ vertical-align: 0;
+ margin-right: 15px;
+}
+
+h2
+{
+    display: inline-block;
+}
+
+.flex-column
+{
+    padding: 15px 8px 8px 15px;
+    margin-top: 30px;
+}
+
+.border
+{
+    border-radius: 8px;
+    border: 1px solid #F9F9F9;
+}
+
+.text-card
+{
+    color: var(--black);
+    font-weight: 600;
+    justify-content: start;
+}
+
+p
+{
+    margin-bottom: 0;
+}
+
+.container-indication
+{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.row-indication
+{
+    margin-bottom: 30px;
+}
+
+.img-indication
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    color: #222222;
+    font-size: 30px;
+    font-weight: bold;
+
+}
+
+.text-indication
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: var(--light_blue);
+}
+
+.col-lighting
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 20px;
+    border: 1px solid #FFFFFF;
+    background-color: var(--orange);
+}
+
+.row-lighting
+{
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+.col-arrow
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.col-info__img
+{
+    display: flex;
+    justify-content: start;
+}
+
+.col-info__text
+{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    font-style: normal;
+    font-weight: 600;
+}
+
+.row-info
+{
+    margin-top: 25px;
+    margin-bottom: 30px;
+}
+
+.container-info
+{
+    margin-bottom: 30px;
+}
+
+.table
+{
+    border-style: dashed; 
+    width: auto;
+    height: 200px;
+    border-radius: 8px;
+}
+
+.text-table
+{
+    color: var(--dark_grey);
+    font-style: normal;
+    font-weight: 600;
+    display: flex;
+    text-align: start;
+    padding-top: 120px;
+}
+
+.img-table
+{
+    display: flex;
+    justify-content: end;
+    padding-top: 90px;
+}
+
+.h4-text
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.table-2
+{
+    border: 1px solid #E0E0E0;
+    border-radius: 8px;
+    width: 500px;
+    height: 40px;
+}
+
+.text-table-2
+{
+    color: var(--dark_grey);
+    font-style: normal;
+    font-weight: 600;
+    display: block;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.btn-insert
+{
+    display: block;
+    text-align: center;    
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.btn.btn-danger
+{
+    background-color: var(--orange) ; 
+    border-radius: 100px;
+    font-weight: bold;
+    color: white;
+    width: 280px;
+    height: 40px;
+}
